# QtPicto

./: .gitignore  .gitmodules  CMakeLists.txt  QmlPicto.pro  README.md
QmlPicto/: Awesome.qml  CMakeLists.txt  Material.qml  Picto.qml  QmlPicto  QmlPicto.pro  keytable.cpp  pictoimageprovider.cpp  pictoimageprovider.h  qmldir  qmlpicto.cpp  qmlpicto.h  qmlpicto.pri  qmlpicto.pro  qmlpicto.qmltypes  qmlpicto.qrc  qmlpicto_global.h  qmlpicto_plugin.cpp  qmlpicto_plugin.h  qmlpictoview.cpp  qmlpictoview.h
QmlPictoDemo/: CMakeLists.txt  QmlPictoDemo.pro  main.cpp  main.qml
QmlPictoWidgets/: QmlPictoWidgets.pro  main.cpp  mainwindow.cpp  mainwindow.ui
QtPicto/: CMakeLists.txt  QtPicto  QtPicto.pri  QtPicto.pro  awesome.cpp  awesome.h  material.cpp  material.h  qtpicto.cpp  qtpicto.h  qtpicto.qrc
QtPictoWidgets/: QtPictoWidgets.pro
scripts/: package.json  tsconfig.json  typings.json
scripts/src/: index.js  index.ts
scripts/templates/: enum.qml  icon.cpp  icon.h
scripts/typings/: index.d.ts
scripts/typings/globals/mz/: index.d.ts
